[package]
name = "segment"
version = "0.1.0"
authors = ["Kohei Watanabe <xbeef29@gmail.com>"]
readme  = "README.md"
license = "Unlicense/MIT"
repository  = "https://github.com/feb29/segment"
keywords    = ["bit", "matrix"]
categories  = []
description = ""

[dependencies]
compacts = "0.6"
parking_lot = "0.4"
rocksdb = { git = "https://github.com/pingcap/rust-rocksdb.git" }