[package]
name = "segment"
version = "0.1.0"
authors = ["Kohei Watanabe <xbeef29@gmail.com>"]
readme  = "README.md"
license = "Unlicense/MIT"
repository  = "https://github.com/feb29/segment"
keywords    = ["segment"]
categories  = []
description = ""

[dependencies]
parking_lot = "0.5"
[dependencies.compacts]
version = "0.6"
[dependencies.rocksdb]
git = "https://github.com/pingcap/rust-rocksdb.git"
[dependencies.linked-hash-map]
git = "https://github.com/feb29/linked-hash-map.git"
